# ai_agents_rag_melancia

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-finetuning.txt  requirements.txt  test_queries.py
agent/: config.py  keywords.py  main.py  memory.py  prompt.py  retriever.py  utils.py
docs/: ACAO_IMEDIATA.md  AGENT_ARCHITECTURE.md  BENCHMARK_ANALYSIS.md  EXPERIMENTACAO.md  FINE_TUNING_GUIDE.md  GAP_ANALYSIS.md  HARDWARE_SETUP.md  MLOPS_REPORT.md  MODEL_BENCHMARK_GUIDE.md  MONITORING_BEST_PRACTICES.md  RAG_MEMORY_VS_CACHE.md  README_EVALUATION.md  RESUMO_FINE_TUNING.md
etl_and_scrapping/: chunks.ipynb  run_etl.py  scraper.py
mlruns/0/: meta.yaml
mlruns/166136948220834382/: meta.yaml
mlruns/166136948220834382/340c415d59f64f75aae1ff527250d859/: meta.yaml
mlruns/166136948220834382/340c415d59f64f75aae1ff527250d859/artifacts/: benchmark_results.json
mlruns/166136948220834382/340c415d59f64f75aae1ff527250d859/metrics/: gpt-4o-mini_cost_total  gpt-4o-mini_latency_avg  gpt-4o-mini_quality_avg  gpt-4o-mini_relevance_avg  llama3.2:3b_cost_total  llama3.2:3b_latency_avg  llama3.2:3b_quality_avg  llama3.2:3b_relevance_avg  ollama_llama3.2:3b_cost  ollama_llama3.2:3b_latency  ollama_llama3.2:3b_quality  openai_gpt-4o-mini_cost  openai_gpt-4o-mini_latency  openai_gpt-4o-mini_quality
mlruns/166136948220834382/340c415d59f64f75aae1ff527250d859/params/: models
mlruns/166136948220834382/340c415d59f64f75aae1ff527250d859/tags/: mlflow.source.git.commit
mlruns/166136948220834382/6252dfdb4fc34bb38efd14654f0f4b52/: meta.yaml
mlruns/166136948220834382/6252dfdb4fc34bb38efd14654f0f4b52/artifacts/: benchmark_results.json
mlruns/166136948220834382/6252dfdb4fc34bb38efd14654f0f4b52/metrics/: gpt-4o-mini_cost_total  gpt-4o-mini_latency_avg  gpt-4o-mini_quality_avg  gpt-4o-mini_relevance_avg  ollama_phi3:mini_cost  ollama_phi3:mini_latency  ollama_phi3:mini_quality  openai_gpt-4o-mini_cost  openai_gpt-4o-mini_latency  openai_gpt-4o-mini_quality  phi3:mini_cost_total  phi3:mini_latency_avg  phi3:mini_quality_avg  phi3:mini_relevance_avg
mlruns/166136948220834382/6252dfdb4fc34bb38efd14654f0f4b52/tags/: mlflow.source.git.commit
mlruns/166136948220834382/720bf911585d440db15b505c62e0f45b/: meta.yaml
mlruns/166136948220834382/720bf911585d440db15b505c62e0f45b/artifacts/: benchmark_results.json
mlruns/166136948220834382/720bf911585d440db15b505c62e0f45b/metrics/: gpt-4o-mini_cost_total  gpt-4o-mini_latency_avg  gpt-4o-mini_quality_avg  gpt-4o-mini_relevance_avg  openai_gpt-4o-mini_cost  openai_gpt-4o-mini_latency  openai_gpt-4o-mini_quality
mlruns/166136948220834382/720bf911585d440db15b505c62e0f45b/params/: models
mlruns/166136948220834382/720bf911585d440db15b505c62e0f45b/tags/: mlflow.source.git.commit
mlruns/166136948220834382/d1461336f85e45c7afad33ed2a0bcb62/: meta.yaml
mlruns/166136948220834382/d1461336f85e45c7afad33ed2a0bcb62/artifacts/: benchmark_results.json
mlruns/166136948220834382/d1461336f85e45c7afad33ed2a0bcb62/metrics/: gpt-4o-mini_cost_total  gpt-4o-mini_latency_avg  gpt-4o-mini_quality_avg  gpt-4o-mini_relevance_avg  ollama_phi3:mini_cost  ollama_phi3:mini_latency  ollama_phi3:mini_quality  openai_gpt-4o-mini_cost  openai_gpt-4o-mini_latency  openai_gpt-4o-mini_quality  phi3:mini_cost_total  phi3:mini_latency_avg  phi3:mini_quality_avg  phi3:mini_relevance_avg
mlruns/166136948220834382/d1461336f85e45c7afad33ed2a0bcb62/tags/: mlflow.source.git.commit
mlruns/166136948220834382/da3afe017fc14bf180a5e5a06277bf98/: meta.yaml
mlruns/166136948220834382/da3afe017fc14bf180a5e5a06277bf98/artifacts/: benchmark_results.json
mlruns/166136948220834382/da3afe017fc14bf180a5e5a06277bf98/metrics/: gpt-4o-mini_cost_total  gpt-4o-mini_latency_avg  gpt-4o-mini_quality_avg  gpt-4o-mini_relevance_avg  ollama_phi3:mini_cost  ollama_phi3:mini_latency  ollama_phi3:mini_quality  openai_gpt-4o-mini_cost  openai_gpt-4o-mini_latency  openai_gpt-4o-mini_quality  phi3:mini_cost_total  phi3:mini_latency_avg  phi3:mini_quality_avg  phi3:mini_relevance_avg
mlruns/166136948220834382/da3afe017fc14bf180a5e5a06277bf98/params/: models
mlruns/166136948220834382/da3afe017fc14bf180a5e5a06277bf98/tags/: mlflow.source.name
mlruns/730024644759524935/: meta.yaml
mlruns/730024644759524935/0cebe8161c35498c8d881b01a4fbaad4/: meta.yaml
mlruns/730024644759524935/2ffb9f6d762446459e3b1b671fa3edea/: meta.yaml
mlruns/730024644759524935/60eaa2d167384e619a1b2c9085d854f5/: meta.yaml
mlruns/730024644759524935/834d5521b7564d0e9cc81ce75b44564b/: meta.yaml
mlruns/730024644759524935/a521d19205a5430196dd8e20cc4dcce3/: meta.yaml
mlruns/730024644759524935/bd3b0e4132be4c0eb1edac609bfdf176/: meta.yaml
mlruns/730024644759524935/bf619625f92d414aae5ab7f2990d479e/: meta.yaml
mlruns/730024644759524935/d3e13b5102aa4f2f94c3005eebc5e876/: meta.yaml
mlruns/730024644759524935/f54207f1ef5842fd9d132c3dbb431b8c/: meta.yaml
notebooks/: evaluate_model.ipynb  experimentacao_llms.ipynb  fine_tuning_qlora_colab.ipynb  prepare_finetuning_data.ipynb
src/: __init__.py
src/agent/: config.py  keywords.py  main.py  memory.py  prompt.py  retriever.py  utils.py  web_interface.py  web_interface_with_eval.py
src/etl/: __init__.py  analyzer.py  fix_filenames.py  populate_vector_db.py  run_etl.py  run_etl_blog_conecta.py  run_etl_central_vendedores.py  scraper.py  scraper_blog_conecta.py  scraper_central_vendedores.py  urls.ipynb
src/evaluation/: __init__.py  evaluator.py  interaction_logger.py  rag_evaluator.py
src/experiments/: __init__.py  benchmark.py  benchmark_models_mlflow.py  multi_llm.py  run_experiments.py
src/finetuning/: __init__.py  data_prep.py  export_to_ollama.py  qlora_trainer.py
src/llm/: __init__.py  manager.py
src/mlops/: __init__.py  model_router.py  registry.py  tracking.py
src/monitoring/: __init__.py  latency_monitor.py
src/rag/: rag_with_evaluation.py
tests/: debug_retrieval.py  inspect_chunks.py  quick_test.py  test_agent_e2e.py  test_rag.py  test_relevance_filter.py
(+84 files in other folders)
